--- a/src/main/webapp/sass/mysmartfridge.scss
+++ b/src/main/webapp/sass/mysmartfridge.scss
@@ -3,6 +3,7 @@
 
 // Theme stylesheet
 @import 'inc/business-casual';
+@import 'inc/login-form-snippet';
 
 // Fonts
 @import 'http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800';
